--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
        
 
         <main>
-            <section>
+            <section id="recherche">
                     <div class="recherche">
                         <h3>Trouvez votre hébergement pour des vacances de rêve</h3>
                         <p>En plein centre ville ou en pleine nature</p>
