--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
         <main>
             <section id="recherche">
                     <div class="recherche">
-                        <h3>Trouvez votre hébergement pour des vacances de rêve</h3>
+                        <h2>Trouvez votre hébergement pour des vacances de rêve</h2>
                         <p>En plein centre ville ou en pleine nature</p>
                     </div>
                     <div class="search">
                             <div class="iconMap searchBar"><i class="fa-solid fa-location-dot"></i></div>
                             <div class="searchMap searchBar"><input type="search" value="Marseille, France"/></div>
-                            <div class="buttonSearch searchBar"><i class="fa-solid fa-magnifying-glass iconHidden invisible"></i><span class="textHidden">Rechercher</span></div>
+                            <div class="buttonSearch searchBar"><i class="fa-solid fa-magnifying-glass iconHidden"></i><span class="textHidden">Rechercher</span></div>
                     </div>
                     <div class="filters alignFilters">
-                        <h3>Filtres</h3>
+                        <h2>Filtres</h2>
                             <div class="economic alignFilters buttonFilters">
                                 <i class="fa-solid fa-money-bill-wave blueIcons "></i>
                                 <p class="textFilters">Économique</p>
@@ -66,11 +66,11 @@
             </section>
             <section id="hebergements">
                 <div class="hebergements">
-                    <h3 class="paddingTittle">Hébergements à Marseille</h3>
+                    <h2 class="paddingTittle">Hébergements à Marseille</h2>
                     <div class="galerie">
                         <div class="vignettes">
                             <img src="images/hebergements/3_medium/AubLaCannevbiere.jpg" alt="Photo d'une chambre de l'Auberge La Cannebière" class="imgVignettes"/>
-                            <h4>Auberge La Cannebière</h4>
+                            <h3>Auberge La Cannebière</h3>
                             <p class="textVignettes">Nuit à partir de 25€</p>
                             <div class="notation">
                                 <i class="fa-solid fa-star switchBlue"></i>
@@ -82,7 +82,7 @@
                         </div>
                         <div class="vignettes">
                             <img src="images/hebergements/3_medium/hotelDuPort.jpg" alt="Photo d'une chambre de l'Hôtel du port" class="imgVignettes"/>
-                            <h4>Hôtel du port</h4>
+                            <h3>Hôtel du port</h3>
                             <p class="textVignettes">Nuit à partir de 52€</p>
                             <div class="notation">
                                 <i class="fa-solid fa-star switchBlue"></i>
@@ -94,7 +94,7 @@
                         </div>
                         <div class="vignettes">
                             <img src="images/hebergements/3_medium/hotelLesMouettes.jpg" alt="Photo d'une chambre de l'Auberge La Cannebière" class="imgVignettes"/>
-                            <h4>Hôtel Les Mouettes</h4>
+                            <h3>Hôtel Les Mouettes</h3>
                             <p class="textVignettes">Nuit à partir de 76€</p>
                             <div class="notation">
                                 <i class="fa-solid fa-star switchBlue"></i>
@@ -106,7 +106,7 @@
                         </div>
                         <div class="vignettes">
                             <img src="images/hebergements/3_medium/hotelDeLaMer.jpg" alt="Photo d'une chambre de l'Auberge La Cannebière" class="imgVignettes"/>
-                            <h4>Hôtel de la mer</h4>
+                            <h3>Hôtel de la mer</h3>
                             <p class="textVignettes">Nuit à partir de 46€</p>
                             <div class="notation">
                                 <i class="fa-solid fa-star switchBlue"></i>
@@ -118,7 +118,7 @@
                         </div>
                         <div class="vignettes">
                             <img src="images/hebergements/3_medium/aubergeLePanier.jpg" alt="Photo d'une chambre de l'Auberge La Cannebière" class="imgVignettes"/>
-                            <h4>Auberge Le Panier</h4>
+                            <h3>Auberge Le Panier</h3>
                             <p class="textVignettes">Nuit à partir de 23€</p>
                             <div class="notation">
                                 <i class="fa-solid fa-star switchBlue"></i>
@@ -130,7 +130,7 @@
                         </div>
                         <div class="vignettes">
                             <img src="images/hebergements/3_medium/hotelChezAmina.jpg" alt="Photo d'une chambre de l'Auberge La Cannebière" class="imgVignettes"/>
-                            <h4>Hôtel chez Amina</h4>
+                            <h3>Hôtel chez Amina</h3>
                             <p class="textVignettes">Nuit à partir de 96€</p>
                             <div class="notation">
                                 <i class="fa-solid fa-star switchBlue"></i>
@@ -141,15 +141,15 @@
                             </div>
                         </div>
                     </div>
-                <h4>Afficher plus</h4>
+                <h3>Afficher plus</h3>
                 </div>
                 <div class="popularity">
-                    <h3 class="paddingTittle">Les plus populaires</h3>
+                    <h2 class="paddingTittle">Les plus populaires</h2>
                     <div class="galerieColumn">
                         <div class="vignettesColumn">
                             <img src="images/hebergements/3_medium/hotelLeSoleilDuMatin.jpg" alt="Photo d'une chambre de l'Hôtel du port" class="imgVignettesColumn"/>
                                 <div>
-                                    <h4>Hôtel Le soleil du matin</h4>
+                                    <h3>Hôtel Le soleil du matin</h3>
                                     <p class="textVignettes">Nuit à partir de 128€</p>
                                     <div class="notation">
                                         <i class="fa-solid fa-star switchBlue"></i>
@@ -163,7 +163,7 @@
                         <div class="vignettesColumn">
                             <img src="images/hebergements/3_medium/auCoeurDeLEauChambreHote.jpg" alt="Photo d'une chambre de l'Hôtel du port" class="imgVignettesColumn"/>
                                 <div>
-                                    <h4>Au cœur de l'eau Chambres d'hôtes</h4>
+                                    <h3>Au cœur de l'eau Chambres d'hôtes</h3>
                                     <p class="textVignettes">Nuit à partir de 71€</p>
                                     <div class="notation">
                                         <i class="fa-solid fa-star switchBlue"></i>
@@ -177,7 +177,7 @@
                         <div class="vignettesColumn">
                             <img src="images/hebergements/3_medium/hotelToutBleuEtBlanc.jpg" alt="Photo d'une chambre de l'Hôtel du port" class="imgVignettesColumn"/>
                                 <div>
-                                    <h4>Hôtel Tout Bleu et Blanc</h4>
+                                    <h3>Hôtel Tout Bleu et Blanc</h3>
                                     <p class="textVignettes">Nuit à partir de 68€</p>
                                     <div class="notation">
                                         <i class="fa-solid fa-star switchBlue"></i>
@@ -193,34 +193,34 @@
             </section>
             <section id="activities">
                 <div class="activities">
-                    <h3>Activités à Marseille</h3>
+                    <h2>Activités à Marseille</h2>
                     <div class="galerieActivities">
                         <div class="grandesVignettesActivities">
                             <img src="images/activites/3_medium/vieuxPort.jpg" alt="Photo du vieux port de Marseille" class="imgVignettesActivities"/>
-                            <h4>Vieux Port</h4>
+                            <h3>Vieux Port</h3>
                         </div>
                         <div class="petitesVignettes">
                             <div class="vignettesActivities">
                                 <img src="images/activites/3_medium/FortDePomegues.jpg" alt="Photo du fort de Pomègues" class="imgVignettesActivities"/>
-                                <h4>Fort de Pomègues</h4>
+                                <h3>Fort de Pomègues</h3>
                             </div>
                             <div class="vignettesActivities">
                                 <img src="images/activites/3_medium/ilesDuFrioul.jpg" alt="Photo panoramique des îles du Frioul depuis la terre" class="imgVignettesActivities"/>
-                                <h4>Îles du Frioul</h4>
+                                <h3>Îles du Frioul</h3>
                             </div>
                         </div>
                         <div class="grandesVignettesActivities">
                             <img src="images/activites/3_medium/ParcNationalDesCalanques.jpg" alt="Vue de la mer depuis les Calanques" class="imgVignettesActivities"/>
-                            <h4>Parc National des Calanques</h4>
+                            <h3>Parc National des Calanques</h3>
                         </div>
                         <div class="petitesVignettes">
                             <div class="vignettesActivities">
                                 <img src="images/activites/3_medium/notreDameDeLaGarde.jpg" alt="Vue de Notre-Dame-de-la-Garde" class="imgVignettesActivities"/>
-                                <h4>Notre-Dame-de-la-Garde</h4>
+                                <h3>Notre-Dame-de-la-Garde</h3>
                             </div>
                             <div class="vignettesActivities">
                                 <img src="images/activites/3_medium/ParcLongchamp.jpg" alt="Photo du parc Longchamp" class="imgVignettesActivities"/>
-                                <h4>Parc Longchamp</h4>
+                                <h3>Parc Longchamp</h3>
                             </div>
                         </div>
                     </div>
@@ -231,7 +231,7 @@
         <footer>
             <div class="footerContainer">
                 <div>
-                    <h4>Titre</h4>
+                    <h3>Titre</h3>
                     <ul>
                         <li>lien</li>
                         <li>lien</li>
@@ -239,7 +239,7 @@
                     </ul>
                 </div>
                 <div>
-                    <h4>Titre</h4>
+                    <h3>Titre</h3>
                     <ul>
                         <li>lien</li>
                         <li>lien</li>
@@ -247,7 +247,7 @@
                     </ul>
                 </div>
                 <div>
-                    <h4>Titre</h4>
+                    <h3>Titre</h3>
                     <ul>
                         <li>lien</li>
                         <li>lien</li>
