--- a/index.html
+++ b/index.html
@@ -195,31 +195,31 @@
                 <div class="activities">
                     <h2>Activités à Marseille</h2>
                     <div class="galerieActivities">
-                        <div class="grandesVignettesActivities">
-                            <img src="images/activites/3_medium/vieuxPort.jpg" alt="Photo du vieux port de Marseille" class="imgVignettesActivities"/>
+                        <div class="activites">
+                            <img src="images/activites/3_medium/vieuxPort.jpg" alt="Photo du vieux port de Marseille" class="activitesImg"/>
                             <h3>Vieux Port</h3>
                         </div>
-                        <div class="petitesVignettes">
-                            <div class="vignettesActivities">
-                                <img src="images/activites/3_medium/FortDePomegues.jpg" alt="Photo du fort de Pomègues" class="imgVignettesActivities"/>
+                        <div class="activitesSplit">
+                            <div class="activites">
+                                <img src="images/activites/3_medium/FortDePomegues.jpg" alt="Photo du fort de Pomègues" class="activitesImgSmall"/>
                                 <h3>Fort de Pomègues</h3>
                             </div>
-                            <div class="vignettesActivities">
-                                <img src="images/activites/3_medium/ilesDuFrioul.jpg" alt="Photo panoramique des îles du Frioul depuis la terre" class="imgVignettesActivities"/>
+                            <div class="activites">
+                                <img src="images/activites/3_medium/ilesDuFrioul.jpg" alt="Photo panoramique des îles du Frioul depuis la terre" class="activitesImgSmall"/>
                                 <h3>Îles du Frioul</h3>
                             </div>
                         </div>
-                        <div class="grandesVignettesActivities">
-                            <img src="images/activites/3_medium/ParcNationalDesCalanques.jpg" alt="Vue de la mer depuis les Calanques" class="imgVignettesActivities"/>
+                        <div class="activites">
+                            <img src="images/activites/3_medium/ParcNationalDesCalanques.jpg" alt="Vue de la mer depuis les Calanques" class="activitesImg"/>
                             <h3>Parc National des Calanques</h3>
                         </div>
-                        <div class="petitesVignettes">
-                            <div class="vignettesActivities">
-                                <img src="images/activites/3_medium/notreDameDeLaGarde.jpg" alt="Vue de Notre-Dame-de-la-Garde" class="imgVignettesActivities"/>
+                        <div class="activitesSplit">
+                            <div class="activites">
+                                <img src="images/activites/3_medium/notreDameDeLaGarde.jpg" alt="Vue de Notre-Dame-de-la-Garde" class="activitesImgSmall"/>
                                 <h3>Notre-Dame-de-la-Garde</h3>
                             </div>
-                            <div class="vignettesActivities">
-                                <img src="images/activites/3_medium/ParcLongchamp.jpg" alt="Photo du parc Longchamp" class="imgVignettesActivities"/>
+                            <div class="activites">
+                                <img src="images/activites/3_medium/ParcLongchamp.jpg" alt="Photo du parc Longchamp" class="activitesImgSmall"/>
                                 <h3>Parc Longchamp</h3>
                             </div>
                         </div>
