--- a/index.html
+++ b/index.html
@@ -230,28 +230,26 @@
 
         <footer>
             <div class="footerContainer">
-                <div>
-                    <h3>Titre</h3>
-                    <ul>
-                        <li>lien</li>
-                        <li>lien</li>
-                        <li>lien</li>
+                <div class="footerElement">
+                    <h3 class="footerNoPadding">A propos</h3>
+                    <ul class="footerUl">
+                        <li class="footerLi">Fonctionnement du site</li>
+                        <li class="footerLi">Conditions générales de vente</li>
+                        <li class="footerLi">Données et confidentialité</li>
                     </ul>
                 </div>
-                <div>
-                    <h3>Titre</h3>
-                    <ul>
-                        <li>lien</li>
-                        <li>lien</li>
-                        <li>lien</li>
+                <div class="footerElement">
+                    <h3 class="footerNoPadding">Nos hébergements</h3>
+                    <ul class="footerUl">
+                        <li class="footerLi">Charte qualité</li>
+                        <li class="footerLi">Soumettre votre hôtel</li>
                     </ul>
                 </div>
-                <div>
-                    <h3>Titre</h3>
-                    <ul>
-                        <li>lien</li>
-                        <li>lien</li>
-                        <li>lien</li>
+                <div class="footerElement">
+                    <h3 class="footerNoPadding">Assistance</h3>
+                    <ul class="footerUl">
+                        <li class="footerLi">Centre d'aide</li>
+                        <li class="footerLi">Nous contacter</li>
                     </ul>
                 </div>
             </div>
