--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     <h2>Activités à Marseille</h2>
                     <div class="galerieActivities">
 
-                        <div class="columnGalerie">
+                        <div class="columnGalerie marginRight">
 
                             <div class="vignetteGalerie">
                                 <img src="images/activites/3_medium/vieuxPort.jpg" alt="Photo du vieux port de Marseille" class="activitesImg"/>
@@ -204,22 +204,22 @@
                             </div>
                         </div>
 
-                        <div class="columnGalerie">
+                        <div class="columnGalerie marginRight">
                             <div class="columnSplitGalerie">
                                 <div class="vignetteGalerie">
-                                    <img src="images/activites/3_medium/FortDePomegues.jpg" alt="Photo du fort de Pomègues" class="activitesImg"/>
+                                    <img src="images/activites/3_medium/FortDePomegues.jpg" alt="Photo du fort de Pomègues" class="activitesImgSmall"/>
                                     <h3>Fort de Pomègues</h3>
                                 </div>
                             </div>
 
-                            <div class="columnSplitGalerie">
+                            <div class="columnSplitGalerie marginTop">
                                 <div class="vignetteGalerie">
-                                    <img src="images/activites/3_medium/ilesDuFrioul.jpg" alt="Photo panoramique des îles du Frioul depuis la terre" class="activitesImg"/>
+                                    <img src="images/activites/3_medium/ilesDuFrioul.jpg" alt="Photo panoramique des îles du Frioul depuis la terre" class="activitesImgSmall"/>
                                     <h3>Îles du Frioul</h3>
                                 </div>
                             </div>
                         </div>
-                        <div class="columnGalerie">
+                        <div class="columnGalerie marginRight">
                             <div class="vignetteGalerie">
                                 <img src="images/activites/3_medium/ParcNationalDesCalanques.jpg" alt="Vue de la mer depuis les Calanques" class="activitesImg"/>
                                 <h3>Parc National des Calanques</h3>
@@ -229,13 +229,13 @@
                         <div class="columnGalerie">
                             <div class="columnSplitGalerie">
                                 <div class="vignetteGalerie">
-                                    <img src="images/activites/3_medium/notreDameDeLaGarde.jpg" alt="Vue de Notre-Dame-de-la-Garde" class="activitesImg"/>
+                                    <img src="images/activites/3_medium/notreDameDeLaGarde.jpg" alt="Vue de Notre-Dame-de-la-Garde" class="activitesImgSmall"/>
                                     <h3>Notre-Dame-de-la-Garde</h3>
                                 </div>
                             </div>
-                            <div class="columnSplitGalerie">
+                            <div class="columnSplitGalerie marginTop">
                                 <div class="vignetteGalerie">
-                                    <img src="images/activites/3_medium/ParcLongchamp.jpg" alt="Photo du Parc ParcLongchamp" class="activitesImg"/>
+                                    <img src="images/activites/3_medium/ParcLongchamp.jpg" alt="Photo du Parc ParcLongchamp" class="activitesImgSmall"/>
                                     <h3>Parc Longchamp</h3>
                                 </div>
                             </div>
