--- a/index.html
+++ b/index.html
@@ -144,51 +144,54 @@
                 <h3>Afficher plus</h3>
                 </div>
                 <div class="popularity">
-                    <h2 class="paddingTittle">Les plus populaires</h2>
-                    <div class="galerieColumn">
-                        <div class="vignettesColumn">
-                            <img src="images/hebergements/3_medium/hotelLeSoleilDuMatin.jpg" alt="Photo d'une chambre de l'Hôtel du port" class="imgVignettesColumn"/>
-                                <div>
-                                    <h3>Hôtel Le soleil du matin</h3>
-                                    <p class="textVignettes">Nuit à partir de 128€</p>
-                                    <div class="notation">
-                                        <i class="fa-solid fa-star switchBlue"></i>
-                                        <i class="fa-solid fa-star switchBlue"></i>
-                                        <i class="fa-solid fa-star switchBlue"></i>
-                                        <i class="fa-solid fa-star switchBlue"></i>
-                                        <i class="fa-solid fa-star switchBlue"></i>
-                                    </div>
-                                </div>
-                        </div>
-                        <div class="vignettesColumn">
-                            <img src="images/hebergements/3_medium/auCoeurDeLEauChambreHote.jpg" alt="Photo d'une chambre de l'Hôtel du port" class="imgVignettesColumn"/>
-                                <div>
-                                    <h3>Au cœur de l'eau Chambres d'hôtes</h3>
-                                    <p class="textVignettes">Nuit à partir de 71€</p>
-                                    <div class="notation">
-                                        <i class="fa-solid fa-star switchBlue"></i>
-                                        <i class="fa-solid fa-star switchBlue"></i>
-                                        <i class="fa-solid fa-star switchBlue"></i>
-                                        <i class="fa-solid fa-star switchBlue"></i>
-                                        <i class="fa-solid fa-star switchGrey"></i>
-                                    </div>
-                                </div>
-                        </div>
-                        <div class="vignettesColumn">
-                            <img src="images/hebergements/3_medium/hotelToutBleuEtBlanc.jpg" alt="Photo d'une chambre de l'Hôtel du port" class="imgVignettesColumn"/>
-                                <div>
-                                    <h3>Hôtel Tout Bleu et Blanc</h3>
-                                    <p class="textVignettes">Nuit à partir de 68€</p>
-                                    <div class="notation">
-                                        <i class="fa-solid fa-star switchBlue"></i>
-                                        <i class="fa-solid fa-star switchBlue"></i>
-                                        <i class="fa-solid fa-star switchBlue"></i>
-                                        <i class="fa-solid fa-star switchBlue"></i>
-                                        <i class="fa-solid fa-star switchGrey"></i>
-                                    </div>
-                                </div>
-                        </div>
+                    <div class="arrowPosition">
+                        <h2 class="paddingTittle">Les plus populaires</h2>
+                        <i class="fa-solid fa-arrow-trend-up arrowPop"></i>
                     </div>
+                        <div class="galerieColumn">
+                            <div class="vignettesColumn">
+                                <img src="images/hebergements/3_medium/hotelLeSoleilDuMatin.jpg" alt="Photo d'une chambre de l'Hôtel du port" class="imgVignettesColumn"/>
+                                    <div class="descriptionText">
+                                        <h3>Hôtel Le soleil du matin</h3>
+                                        <p class="textVignettes">Nuit à partir de 128€</p>
+                                        <div class="notation">
+                                            <i class="fa-solid fa-star switchBlue"></i>
+                                            <i class="fa-solid fa-star switchBlue"></i>
+                                            <i class="fa-solid fa-star switchBlue"></i>
+                                            <i class="fa-solid fa-star switchBlue"></i>
+                                            <i class="fa-solid fa-star switchBlue"></i>
+                                        </div>
+                                    </div>
+                            </div>
+                            <div class="vignettesColumn">
+                                <img src="images/hebergements/3_medium/auCoeurDeLEauChambreHote.jpg" alt="Photo d'une chambre de l'Hôtel du port" class="imgVignettesColumn"/>
+                                    <div class="descriptionText">
+                                        <h3>Au cœur de l'eau Chambres d'hôtes</h3>
+                                        <p class="textVignettes">Nuit à partir de 71€</p>
+                                        <div class="notation">
+                                            <i class="fa-solid fa-star switchBlue"></i>
+                                            <i class="fa-solid fa-star switchBlue"></i>
+                                            <i class="fa-solid fa-star switchBlue"></i>
+                                            <i class="fa-solid fa-star switchBlue"></i>
+                                            <i class="fa-solid fa-star switchGrey"></i>
+                                        </div>
+                                    </div>
+                            </div>
+                            <div class="vignettesColumn">
+                                <img src="images/hebergements/3_medium/hotelToutBleuEtBlanc.jpg" alt="Photo d'une chambre de l'Hôtel du port" class="imgVignettesColumn"/>
+                                    <div class="descriptionText">
+                                        <h3>Hôtel Tout Bleu et Blanc</h3>
+                                        <p class="textVignettes">Nuit à partir de 68€</p>
+                                        <div class="notation">
+                                            <i class="fa-solid fa-star switchBlue"></i>
+                                            <i class="fa-solid fa-star switchBlue"></i>
+                                            <i class="fa-solid fa-star switchBlue"></i>
+                                            <i class="fa-solid fa-star switchBlue"></i>
+                                            <i class="fa-solid fa-star switchGrey"></i>
+                                        </div>
+                                    </div>
+                            </div>
+                        </div>
                 </div>
             </section>
             <section id="activities">
