MAJ IMG ICONS FAV
Mise à jour des photos icon et favicons

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" type="image/png" href="images/logo/Booki@3x.png"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
@@ -53,31 +54,31 @@
                     <div class="filters">
                         
                         <h2>Filtres</h2>
-                            <ul class="filtersZone""">
+                            <ul class="filtersZone">
                                 <li class="filtersButton">
                                     <i class="fa-solid fa-money-bill-wave filtersIcons"></i>
-                                    <a href="#" alt="trier par budget" class="linkSurvol filtersLink" class="filtersLink">Économique</a>
+                                    <a href="#" alt="trier par budget" class="linkSurvol filtersLink">Économique</a>
                                 </li>
 
                                 <li class="filtersButton">
                                     <i class="fa-solid fa-child filtersIcons"></i>
-                                    <a href="#" alt="trier par capacité" class="filtersLink">Familial</a>
+                                    <a href="#" alt="trier par capacité" class="linkSurvol filtersLink">Familial</a>
                                 </li>
 
                                 <li class="filtersButton">
                                     <i class="fa-solid fa-heart filtersIcons"></i>
-                                    <a href="#" alt="trier pour les couples" class="filtersLink">Romantique</a>
+                                    <a href="#" alt="trier pour les couples" class="linkSurvol filtersLink">Romantique</a>
                                 </li>
 
                                 <li class="filtersButton">
                                     <i class="fa-solid fa-dog filtersIcons"></i>
-                                    <a href="#" alt="trier selon acceptation d'animaux de compagnies" class="filtersLink">Animaux Autorisés</a>
+                                    <a href="#" alt="trier selon acceptation d'animaux de compagnies" class="linkSurvol filtersLink">Animaux Autorisés</a>
                                 </li>
                             </ul>
                     
                     </div>
                     <div>
-                        <p><i class="fa-solid fa-info BlueInfobulle buttonInfoBulle"></i> Plus de 500 logements sont disponibles dans cette ville</p>
+                        <p class="marginZero"><i class="fa-solid fa-info BlueInfobulle buttonInfoBulle"></i> Plus de 500 logements sont disponibles dans cette ville</p>
                     </div>
             </section>
             <section id="hebergements">
@@ -85,7 +86,7 @@
                     <h2 class="paddingTittle">Hébergements à Marseille</h2>
                     <div class="galerie">
                         <div class="vignettes">
-                            <img src="images/hebergements/3_medium/AubLaCannevbiere.jpg" alt="Photo d'une chambre de l'Auberge La Cannebière" class="imgVignettes"/>
+                            <img src="images/hebergements/4_small/marseilleHebergementsSmallAubergeLaCannebiere.jpg" alt="Photo d'une chambre de l'Auberge La Cannebière" class="imgVignettes"/>
                             <h3>Auberge La Cannebière</h3>
                             <p class="textVignettes">Nuit à partir de 25€</p>
                             <div class="notation">
@@ -97,7 +98,7 @@
                             </div>
                         </div>
                         <div class="vignettes">
-                            <img src="images/hebergements/3_medium/hotelDuPort.jpg" alt="Photo d'une chambre de l'Hôtel du port" class="imgVignettes"/>
+                            <img src="images/hebergements/4_small/marseilleHebergementsSmallHotelPort.jpg" alt="Photo d'une chambre de l'Hôtel du port" class="imgVignettes"/>
                             <h3>Hôtel du port</h3>
                             <p class="textVignettes">Nuit à partir de 52€</p>
                             <div class="notation">
@@ -109,7 +110,7 @@
                             </div>
                         </div>
                         <div class="vignettes">
-                            <img src="images/hebergements/3_medium/hotelLesMouettes.jpg" alt="Photo d'une chambre de l'Auberge La Cannebière" class="imgVignettes"/>
+                            <img src="images/hebergements/4_small/marseilleHebergementsSmallHotelLesMouettes.jpg" alt="Prenez le large au sein de l'hôtel Les Mouettes !" class="imgVignettes"/>
                             <h3>Hôtel Les Mouettes</h3>
                             <p class="textVignettes">Nuit à partir de 76€</p>
                             <div class="notation">
@@ -121,7 +122,7 @@
                             </div>
                         </div>
                         <div class="vignettes">
-                            <img src="images/hebergements/3_medium/hotelDeLaMer.jpg" alt="Photo d'une chambre de l'Auberge La Cannebière" class="imgVignettes"/>
+                            <img src="images/hebergements/4_small/marseilleHebergementsSmallHotelMer.jpg" alt="Réservez une chambre de l'hôtel de la mer." class="imgVignettes"/>
                             <h3>Hôtel de la mer</h3>
                             <p class="textVignettes">Nuit à partir de 46€</p>
                             <div class="notation">
@@ -133,7 +134,7 @@
                             </div>
                         </div>
                         <div class="vignettes">
-                            <img src="images/hebergements/3_medium/aubergeLePanier.jpg" alt="Photo d'une chambre de l'Auberge La Cannebière" class="imgVignettes"/>
+                            <img src="images/hebergements/4_small/marseilleHebergementsSmallAubergeLePanier.jpg" alt="Découvrez l'Auberge Le Panier." class="imgVignettes"/>
                             <h3>Auberge Le Panier</h3>
                             <p class="textVignettes">Nuit à partir de 23€</p>
                             <div class="notation">
@@ -145,7 +146,7 @@
                             </div>
                         </div>
                         <div class="vignettes">
-                            <img src="images/hebergements/3_medium/hotelChezAmina.jpg" alt="Photo d'une chambre de l'Auberge La Cannebière" class="imgVignettes"/>
+                            <img src="images/hebergements/4_small/marseilleHebergementsSmallHotelChezAmina.jpg" alt="Réservez une chambre Chez Amina." class="imgVignettes"/>
                             <h3>Hôtel chez Amina</h3>
                             <p class="textVignettes">Nuit à partir de 96€</p>
                             <div class="notation">
@@ -166,7 +167,7 @@
                     </div>
                         <div class="galerieColumn">
                             <div class="vignettesColumn">
-                                    <img src="images/hebergements/3_medium/hotelLeSoleilDuMatin.jpg" alt="Photo d'une chambre de l'Hôtel du port" class="imgVignettesColumn"/>
+                                    <img src="images/hebergements/4_small/marseilleHebergementsSmallHotelSoleilDuMatin.jpg" alt="Découvrez l'hôtel le Soleil du matin..." class="imgVignettesColumn"/>
                                         <div class="descriptionText">
                                             <div>
                                             <h3>Hôtel Le soleil du matin</h3>
@@ -182,7 +183,7 @@
                                         </div>
                             </div>
                             <div class="vignettesColumn">
-                                <img src="images/hebergements/3_medium/auCoeurDeLEauChambreHote.jpg" alt="Photo d'une chambre de l'Hôtel du port" class="imgVignettesColumn"/>
+                                <img src="images/hebergements/4_small/marseilleHebergementsSmallAuCoeurDeLEauChambresHotes.jpg" alt="Découvrez les chambres d'hôtes Au coeur de l'eau..." class="imgVignettesColumn"/>
                                     <div class="descriptionText">
                                         <div>
                                             <h3>Au cœur de l'eau Chambres d'hôtes</h3>
@@ -198,7 +199,7 @@
                                     </div>
                             </div>
                             <div class="vignettesColumn">
-                                <img src="images/hebergements/3_medium/hotelToutBleuEtBlanc.jpg" alt="Photo d'une chambre de l'Hôtel du port" class="imgVignettesColumn"/>
+                                <img src="images/hebergements/4_small/marseilleHebergementsSmallHotelToutBleuBlanc.jpg" alt="Découvrez l'hôtel Tout Bleu et Blanc..." class="imgVignettesColumn"/>
                                     <div class="descriptionText">
                                         <div>
                                             <h3>Hôtel Tout Bleu et Blanc</h3>
@@ -224,7 +225,7 @@
                         <div class="columnGalerie marginRight">
 
                             <div class="vignetteGalerie">
-                                <img src="images/activites/3_medium/vieuxPort.jpg" alt="Photo du vieux port de Marseille" class="activitesImg"/>
+                                <img src="images/activites/4_small/marseilleActivitesSmallVieuxPort.jpg" alt="Photo du vieux port de Marseille" class="activitesImg"/>
                                 <h3>Vieux Port</h3>
                             </div>
                         </div>
@@ -232,21 +233,21 @@
                         <div class="columnGalerie marginRight">
                             <div class="columnSplitGalerie">
                                 <div class="vignetteGalerie">
-                                    <img src="images/activites/3_medium/FortDePomegues.jpg" alt="Photo du fort de Pomègues" class="activitesImgSmall"/>
+                                    <img src="images/activites/4_small/marseilleActivitesSmallfortPomegues.jpg" alt="Photo du fort de Pomègues" class="activitesImgSmall"/>
                                     <h3>Fort de Pomègues</h3>
                                 </div>
                             </div>
 
                             <div class="columnSplitGalerie marginTop">
                                 <div class="vignetteGalerie">
-                                    <img src="images/activites/3_medium/ilesDuFrioul.jpg" alt="Photo panoramique des îles du Frioul depuis la terre" class="activitesImgSmall"/>
+                                    <img src="images/activites/4_small/marseilleActivitesSmallIleFrioul.jpg" alt="Photo panoramique des îles du Frioul depuis la terre" class="activitesImgSmall"/>
                                     <h3>Îles du Frioul</h3>
                                 </div>
                             </div>
                         </div>
                         <div class="columnGalerie marginRight">
                             <div class="vignetteGalerie">
-                                <img src="images/activites/3_medium/ParcNationalDesCalanques.jpg" alt="Vue de la mer depuis les Calanques" class="activitesImg"/>
+                                <img src="images/activites/4_small/marseilleActivitesSmallParcNationalCalanques.jpg" alt="Vue de la mer depuis les Calanques" class="activitesImg"/>
                                 <h3>Parc National des Calanques</h3>
                             </div>
                         </div>
@@ -254,13 +255,13 @@
                         <div class="columnGalerie">
                             <div class="columnSplitGalerie">
                                 <div class="vignetteGalerie">
-                                    <img src="images/activites/3_medium/notreDameDeLaGarde.jpg" alt="Vue de Notre-Dame-de-la-Garde" class="activitesImgSmall"/>
+                                    <img src="images/activites/4_small/marseilleActivitesSmallNotreDameGarde.jpg" alt="Vue de Notre-Dame-de-la-Garde" class="activitesImgSmall"/>
                                     <h3>Notre-Dame-de-la-Garde</h3>
                                 </div>
                             </div>
                             <div class="columnSplitGalerie marginTop">
                                 <div class="vignetteGalerie">
-                                    <img src="images/activites/3_medium/ParcLongchamp.jpg" alt="Photo du Parc ParcLongchamp" class="activitesImgSmall"/>
+                                    <img src="images/activites/4_small/marseilleActivitesSmallParcLongchamp.jpg" alt="Photo du Parc ParcLongchamp" class="activitesImgSmall"/>
                                     <h3>Parc Longchamp</h3>
                                 </div>
                             </div>
