--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
             </section>
             <section id="hebergements">
                 <div class="hebergements">
-                    <h2 class="paddingTittle">Hébergements à Marseille</h2>
+                    <h2 class="marginLine">Hébergements à Marseille</h2>
                     <div class="galerie">
                         <div class="vignettes">
                             <img src="images/hebergements/4_small/marseilleHebergementsSmallAubergeLaCannebiere.jpg" alt="Photo d'une chambre de l'Auberge La Cannebière" class="imgVignettes"/>
                             <h3>Auberge La Cannebière</h3>
                             <p class="textVignettes">Nuit à partir de 25€</p>
-                            <div class="notation">
+                            <div class="">
                                 <i class="fa-solid fa-star switchBlue"></i>
                                 <i class="fa-solid fa-star switchBlue"></i>
                                 <i class="fa-solid fa-star switchBlue"></i>
@@ -101,7 +101,7 @@
                             <img src="images/hebergements/4_small/marseilleHebergementsSmallHotelPort.jpg" alt="Photo d'une chambre de l'Hôtel du port" class="imgVignettes"/>
                             <h3>Hôtel du port</h3>
                             <p class="textVignettes">Nuit à partir de 52€</p>
-                            <div class="notation">
+                            <div class="">
                                 <i class="fa-solid fa-star switchBlue"></i>
                                 <i class="fa-solid fa-star switchBlue"></i>
                                 <i class="fa-solid fa-star switchBlue"></i>
@@ -113,7 +113,7 @@
                             <img src="images/hebergements/4_small/marseilleHebergementsSmallHotelLesMouettes.jpg" alt="Prenez le large au sein de l'hôtel Les Mouettes !" class="imgVignettes"/>
                             <h3>Hôtel Les Mouettes</h3>
                             <p class="textVignettes">Nuit à partir de 76€</p>
-                            <div class="notation">
+                            <div class="">
                                 <i class="fa-solid fa-star switchBlue"></i>
                                 <i class="fa-solid fa-star switchBlue"></i>
                                 <i class="fa-solid fa-star switchBlue"></i>
@@ -125,7 +125,7 @@
                             <img src="images/hebergements/4_small/marseilleHebergementsSmallHotelMer.jpg" alt="Réservez une chambre de l'hôtel de la mer." class="imgVignettes"/>
                             <h3>Hôtel de la mer</h3>
                             <p class="textVignettes">Nuit à partir de 46€</p>
-                            <div class="notation">
+                            <div class="">
                                 <i class="fa-solid fa-star switchBlue"></i>
                                 <i class="fa-solid fa-star switchBlue"></i>
                                 <i class="fa-solid fa-star switchBlue"></i>
@@ -137,7 +137,7 @@
                             <img src="images/hebergements/4_small/marseilleHebergementsSmallAubergeLePanier.jpg" alt="Découvrez l'Auberge Le Panier." class="imgVignettes"/>
                             <h3>Auberge Le Panier</h3>
                             <p class="textVignettes">Nuit à partir de 23€</p>
-                            <div class="notation">
+                            <div class="">
                                 <i class="fa-solid fa-star switchBlue"></i>
                                 <i class="fa-solid fa-star switchBlue"></i>
                                 <i class="fa-solid fa-star switchBlue"></i>
@@ -147,14 +147,16 @@
                         </div>
                         <div class="vignettes">
                             <img src="images/hebergements/4_small/marseilleHebergementsSmallHotelChezAmina.jpg" alt="Réservez une chambre Chez Amina." class="imgVignettes"/>
-                            <h3>Hôtel chez Amina</h3>
-                            <p class="textVignettes">Nuit à partir de 96€</p>
-                            <div class="notation">
-                                <i class="fa-solid fa-star switchBlue"></i>
-                                <i class="fa-solid fa-star switchBlue"></i>
-                                <i class="fa-solid fa-star switchBlue"></i>
-                                <i class="fa-solid fa-star switchBlue"></i>
-                                <i class="fa-solid fa-star switchBlue"></i>
+                            <div class="descriptionText">
+                                <h3>Hôtel chez Amina</h3>
+                                <p class="textVignettes">Nuit à partir de 96€</p>
+                                <div class="">
+                                    <i class="fa-solid fa-star switchBlue"></i>
+                                    <i class="fa-solid fa-star switchBlue"></i>
+                                    <i class="fa-solid fa-star switchBlue"></i>
+                                    <i class="fa-solid fa-star switchBlue"></i>
+                                    <i class="fa-solid fa-star switchBlue"></i>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -162,8 +164,7 @@
                 </div>
                 <div class="popularity">
                     <div class="arrowPosition">
-                        <h2 class="paddingTittle">Les plus populaires</h2>
-                        <i class="fa-solid fa-arrow-trend-up arrowPop"></i>
+                        <h2>Les plus populaires</h2><i class="fa-solid fa-arrow-trend-up arrowPop"></i>
                     </div>
                         <div class="galerieColumn">
                             <div class="vignettesColumn">
@@ -173,7 +174,7 @@
                                             <h3>Hôtel Le soleil du matin</h3>
                                             <p class="textVignettes">Nuit à partir de 128€</p>
                                             </div>
-                                            <div class="notation">
+                                            <div class="">
                                                 <i class="fa-solid fa-star switchBlue"></i>
                                                 <i class="fa-solid fa-star switchBlue"></i>
                                                 <i class="fa-solid fa-star switchBlue"></i>
@@ -189,7 +190,7 @@
                                             <h3>Au cœur de l'eau Chambres d'hôtes</h3>
                                             <p class="textVignettes">Nuit à partir de 71€</p>
                                         </div>
-                                        <div class="notation">
+                                        <div class="">
                                             <i class="fa-solid fa-star switchBlue"></i>
                                             <i class="fa-solid fa-star switchBlue"></i>
                                             <i class="fa-solid fa-star switchBlue"></i>
@@ -205,7 +206,7 @@
                                             <h3>Hôtel Tout Bleu et Blanc</h3>
                                             <p class="textVignettes">Nuit à partir de 68€</p>
                                         </div>
-                                        <div class="notation">
+                                        <div class="">
                                             <i class="fa-solid fa-star switchBlue"></i>
                                             <i class="fa-solid fa-star switchBlue"></i>
                                             <i class="fa-solid fa-star switchBlue"></i>
@@ -219,7 +220,7 @@
             </section>
             <section id="activities">
                 <div class="activities">
-                    <h2>Activités à Marseille</h2>
+                    <h2 class="marginLine marginBr">Activités à Marseille</h2>
                     <div class="galerieActivities">
 
                         <div class="columnGalerie marginRight">
