--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <header>
             <nav>
-                <img src="./images/logo/Booki.png" id="logo" alt="Logo"/>
+                <a href="index.html"><img src="./images/logo/Booki.png" id="logo" alt="Logo"/></a>
                 <ul class="navBar">
                    <li class="navButton"><a href="#hebergements">Hébergements</a></li>
                    <li class="navButton"><a href="#activities">Activités</a></li>
