--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                                 <div class="searchMap searchBar">
                                     <input type="search" value="Marseille, France"/>
                                 </div>
-                                <button class="buttonSearch searchBar">
+                                <button type="submit" class="buttonSearch searchBar">
                                     <i class="fa-solid fa-magnifying-glass iconHidden"></i>
                                     <span class="textHidden">Rechercher</span>
                                 </button>
@@ -57,22 +57,22 @@
                             <ul class="filtersZone">
                                 <li class="testFiltre">
                                     <div class="testFiltreIcon"><i class="fa-solid fa-money-bill-wave"></i></div>
-                                    <div class="testFiltreText"><a href="#" alt="trier par budget">Économique</a></div>
+                                    <div class="testFiltreText"><a href="#" title="trier par budget">Économique</a></div>
                                 </li>
 
                                 <li class="testFiltre">
                                     <div class="testFiltreIcon"><i class="fa-solid fa-child"></i></div>
-                                    <div class="testFiltreText"><a href="#" alt="trier par budget">Familial</a></div>
+                                    <div class="testFiltreText"><a href="#" title="trier par budget">Familial</a></div>
                                 </li>
 
                                 <li class="testFiltre">
                                     <div class="testFiltreIcon"><i class="fa-solid fa-heart"></i></div>
-                                    <div class="testFiltreText"><a href="#" alt="trier par budget">Romantique</a></div>
+                                    <div class="testFiltreText"><a href="#" title="trier par budget">Romantique</a></div>
                                 </li>
 
                                 <li class="testFiltre">
                                     <div class="testFiltreIcon"><i class="fa-solid fa-dog"></i></div>
-                                    <div class="testFiltreText"><a href="#" alt="trier par budget">Animaux Autorisés</a></div>
+                                    <div class="testFiltreText"><a href="#" title="trier par budget">Animaux Autorisés</a></div>
                                 </li>
                             </ul>
                     </div>
