--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
     <body>
 
 
-        <!-- HEADER -->
-
-
         <header>
             <nav>
                 <a href="index.html"><h1><img src="./images/logo/Booki.png" id="logo" alt="Logo"/></h1></a>
@@ -311,47 +308,47 @@
 
                         <div class="columnGalerie marginRight">
 
-                            <div class="vignetteGalerie">
+                            <a href="#" class="vignetteGalerie">
                                 <img src="images/activites/4_small/marseilleActivitesSmallVieuxPort.jpg" alt="Le vieux port de Marseille" class="activitesImg"/>
                                 <h3>Vieux Port</h3>
-                            </div>
+                            </a>
                         </div>
 
                         <div class="columnGalerie marginRight">
-                            <div class="columnSplitGalerie marginLine">
+                            <a href="#" class="columnSplitGalerie marginLine">
                                 <div class="vignetteGalerie">
                                     <img src="images/activites/4_small/marseilleActivitesSmallfortPomegues.jpg" alt="Fort de Pomègues" class="activitesImgSmall"/>
                                     <h3>Fort de Pomègues</h3>
                                 </div>
-                            </div>
+                            </a>
 
-                            <div class="columnSplitGalerie marginTop">
+                            <a href="#" class="columnSplitGalerie marginTop">
                                 <div class="vignetteGalerie">
                                     <img src="images/activites/4_small/marseilleActivitesSmallIleFrioul.jpg" alt="Les îles du Frioul depuis la terre" class="activitesImgSmall"/>
                                     <h3>Îles du Frioul</h3>
                                 </div>
-                            </div>
+                            </a>
                         </div>
-                        <div class="columnGalerie marginRight">
+                        <a href="#" class="columnGalerie marginRight">
                             <div class="vignetteGalerie">
                                 <img src="images/activites/4_small/marseilleActivitesSmallParcNationalCalanques.jpg" alt="La mer depuis les Calanques" class="activitesImg"/>
                                 <h3>Parc National des Calanques</h3>
                             </div>
-                        </div>
+                        </a>
 
                         <div class="columnGalerie">
-                            <div class="columnSplitGalerie marginLine">
+                            <a href="#" class="columnSplitGalerie marginLine">
                                 <div class="vignetteGalerie">
                                     <img src="images/activites/4_small/marseilleActivitesSmallNotreDameGarde.jpg" alt="Notre-Dame-de-la-Garde" class="activitesImgSmall"/>
                                     <h3>Notre-Dame-de-la-Garde</h3>
                                 </div>
-                            </div>
-                            <div class="columnSplitGalerie marginTop">
+                            </a>
+                            <a href="#" class="columnSplitGalerie marginTop">
                                 <div class="vignetteGalerie">
                                     <img src="images/activites/4_small/marseilleActivitesSmallParcLongchamp.jpg" alt="Parc ParcLongchamp" class="activitesImgSmall"/>
                                     <h3>Parc Longchamp</h3>
                                 </div>
-                            </div>
+                            </a>
                         </div>
 
                     </div>
